--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 
 # dependencies
 /node_modules
@@ -18,7 +18,7 @@
 # misc
 .DS_Store
 *.pem
-
+/.history
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -30,3 +30,4 @@ yarn-error.log*
 
 # vercel
 .vercel
+/.history
